--- a/css/style.css
+++ b/css/style.css
@@ -1,15 +1,17 @@
 body {
   font-family: "Roboto", sans-serif;
   margin: 0;
-  display: flex;
-  flex-direction: column;
+  /* display: flex; */
+  /* flex-direction: column; */
+  min-width: fit-content;
+  min-height: 100vh;
 }
 
 a,
 ul {
   text-decoration: none;
   list-style: none;
-  padding-left: 0px;
+  padding: 0px;
   color: #e5e7eb;
 }
 
@@ -17,6 +19,7 @@ h1 {
   font-size: 48px;
   font-weight: 800;
   color: #f9faf8;
+  margin: 0px;
 }
 
 .hero,
@@ -30,24 +33,51 @@ footer {
   color: #e5e7eb;
 }
 
+.header.link {
+  padding: 0px;
+}
+
 .header.logo {
   font-size: 24px;
   color: #f9faf8;
+  padding: 0px;
 }
 
 .header {
-  padding: 0px 8px;
+  padding: 0px 200px;
   display: flex;
   justify-content: space-between;
   align-items: center;
   gap: 8px;
-  flex: auto;
 }
 
 .hero.banner {
   min-height: 250px;
   display: flex;
   flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+  gap: 80px;
+  padding: 80px 200px;
+  /* flex: auto; */
+}
+
+.welcome {
+  display: flex;
+  flex-direction: column;
+  max-width: 700px;
+}
+
+.btn {
+  width: fit-content;
+  height: fit-content;
+  background-color: #3882f6;
+  font-size: 16px;
+  font-weight: 700;
+  color: white;
+  padding: 4px 8px;
+  border-style: none;
+  border-radius: 0.5em;
 }
 
 footer {
