--- a/css/style.css
+++ b/css/style.css
@@ -49,7 +49,7 @@ h3 {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  gap: 8px;
+  gap: 16px;
   background-color: #1f2937;
 }
 
@@ -77,9 +77,10 @@ h3 {
   font-size: 16px;
   font-weight: 700;
   color: white;
-  padding: 4px 8px;
+  padding: 4px 16px;
   border-style: none;
   border-radius: 0.5em;
+  flex-shrink: 0;
 }
 
 .content.image {
@@ -89,6 +90,7 @@ h3 {
   padding-bottom: 60px;
   gap: 16px;
 }
+
 .content img {
   border-radius: 0.7em;
   outline-width: 0.15em;
@@ -105,26 +107,45 @@ h3 {
   text-align: center;
   padding: 0;
 }
+
 .quote {
   display: flex;
   flex-direction: column;
-  padding: 0px 200px;
+  padding: 40px 200px;
   font-size: 36px;
   color: #1f2937;
   background-color: #e5e7eb;
-  margin: 14px 0px;
 }
+
 .quote.text {
   padding: 0px;
   font-weight: 100;
-  margin-top: 80px;
 }
+
 .quote.author {
   align-self: flex-end;
   padding: 0px;
   font-size: 24px;
   font-weight: 700;
-  margin-bottom: 80px;
+}
+.call-to-action {
+  display: flex;
+  background-color: #3882f6;
+  margin: 80px 160px;
+  border-radius: 0.5em;
+  padding: 40px 100px;
+  color: #f9faf8;
+  justify-content: space-between;
+}
+.signup h4,
+.signup p {
+  margin: 6px;
+}
+.signup.btn {
+  border-color: #f9faf8;
+  border-style: solid;
+  border-width: 0.15em;
+  align-self: flex-end;
 }
 footer {
   display: flex;
